--- a/df operations.ipynb
+++ b/df operations.ipynb
@@ -1557,6 +1557,15 @@
    "source": [
     "type(omn)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ogay"
+   ]
   }
  ],
  "metadata": {
